# trading_day_calc

./: .gitignore  README.md  pyproject.toml
script/: get_source_data.py
src/trading_day_calc/: __init__.py  calc.py  trade_date.txt
tests/: test_benchmark.py  test_trading_day_calc.py
