[tool.poetry]
name = "trading_day_calc"
version = "0.1.4"
description = ""
authors = ["jiangzhuochi <1053067021@qq.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"
akshare = "^1.0.19"
numpy = "^1.21.0"
pandas = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
